todo_app/manifests/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-application
  name: todo-app-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-backend
  template:
    metadata:
      labels:
        app: todo-app-backend
    spec:
      containers:
        - name: todo-app-backend
          image: PROJECT/BACKEND
          resource:
            limits:
              cpu: "100m"
              memory: "100Mi"
