todo_app/manifests/deployment-nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-nats
  name: todo-broadcaster-dep
spec:
  replicas: 6
  selector:
    matchLabels:
      app: broadcaster
  template:
    metadata:
      labels:
        app: broadcaster
    spec:
      containers:
        - name: broadcaster
          image: pavelgar/todo_app-broadcaster:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-nats
  name: todo-backend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: pavelgar/todo_app-backend:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-nats
  name: todo-frontend-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
        - name: todo-frontend
          image: pavelgar/todo_app-frontend:latest
