todo_app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-application
  name: todo-app-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-volume
          emptyDir: {}
      containers:
        - name: todo-app
          image: PROJECT/FRONTEND
          resources:
            limits:
              cpu: "100m"
              memory: "200Mi"
          volumeMounts:
          - name: todo-volume
            mountPath: /usr/src/app/files
