todo_app/manifests/linkerd-project.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"kustomize.toolkit.fluxcd.io/checksum":"7770ac53acfd27982a41c51af79e774b60bc0068"},"labels":{"kustomize.toolkit.fluxcd.io/name":"todo-gitops-app","kustomize.toolkit.fluxcd.io/namespace":"flux-system"},"name":"todo-frontend-dep","namespace":"todo-application"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"todo-frontend"}},"template":{"metadata":{"labels":{"app":"todo-frontend"}},"spec":{"containers":[{"image": [...]
      kustomize.toolkit.fluxcd.io/checksum: 7770ac53acfd27982a41c51af79e774b60bc0068
    generation: 1
    labels:
      kustomize.toolkit.fluxcd.io/name: todo-gitops-app
      kustomize.toolkit.fluxcd.io/namespace: flux-system
    name: todo-frontend-dep
    namespace: todo-application
    resourceVersion: "149570"
    uid: f271338e-746a-4c6e-879a-20cb9281a858
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: todo-frontend
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          linkerd.io/inject: enabled
        labels:
          app: todo-frontend
      spec:
        containers:
        - image: pavelgar/todo_app:4353a48310f400a81dccebfab67bcf5abb66009d
          imagePullPolicy: IfNotPresent
          name: todo-frontend
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - message: ReplicaSet "todo-frontend-dep-56674bdb86" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"kustomize.toolkit.fluxcd.io/checksum":"7770ac53acfd27982a41c51af79e774b60bc0068"},"labels":{"kustomize.toolkit.fluxcd.io/name":"todo-gitops-app","kustomize.toolkit.fluxcd.io/namespace":"flux-system"},"name":"todo-backend-dep","namespace":"todo-application"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"todo-backend"}},"template":{"metadata":{"labels":{"app":"todo-backend"}},"spec":{"containers":[{"env":[{"na [...]
      kustomize.toolkit.fluxcd.io/checksum: 7770ac53acfd27982a41c51af79e774b60bc0068
    generation: 1
    labels:
      kustomize.toolkit.fluxcd.io/name: todo-gitops-app
      kustomize.toolkit.fluxcd.io/namespace: flux-system
    name: todo-backend-dep
    namespace: todo-application
    resourceVersion: "151848"
    uid: b09ac829-e40e-4931-87c3-76048b934843
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: todo-backend
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          linkerd.io/inject: enabled
        labels:
          app: todo-backend
      spec:
        containers:
        - env:
          - name: NATS_URL
            value: nats://my-nats.default:4222
          image: pavelgar/todo_app-backend:4353a48310f400a81dccebfab67bcf5abb66009d
          imagePullPolicy: IfNotPresent
          name: todo-backend
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    conditions:
    - message: ReplicaSet "todo-backend-dep-fd76df59b" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - message: Deployment does not have minimum availability.
      reason: MinimumReplicasUnavailable
      status: "False"
      type: Available
    observedGeneration: 1
    replicas: 1
    unavailableReplicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"kustomize.toolkit.fluxcd.io/checksum":"7770ac53acfd27982a41c51af79e774b60bc0068"},"labels":{"kustomize.toolkit.fluxcd.io/name":"todo-gitops-app","kustomize.toolkit.fluxcd.io/namespace":"flux-system"},"name":"todo-broadcaster-dep","namespace":"todo-application"},"spec":{"replicas":6,"selector":{"matchLabels":{"app":"broadcaster"}},"template":{"metadata":{"labels":{"app":"broadcaster"}},"spec":{"containers":[{"env":[{" [...]
      kustomize.toolkit.fluxcd.io/checksum: 7770ac53acfd27982a41c51af79e774b60bc0068
    generation: 1
    labels:
      kustomize.toolkit.fluxcd.io/name: todo-gitops-app
      kustomize.toolkit.fluxcd.io/namespace: flux-system
    name: todo-broadcaster-dep
    namespace: todo-application
    resourceVersion: "151918"
    uid: 2415e507-f9f6-48f1-bb49-8f2d0eb32e40
  spec:
    progressDeadlineSeconds: 600
    replicas: 6
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: broadcaster
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          linkerd.io/inject: enabled
        labels:
          app: broadcaster
      spec:
        containers:
        - env:
          - name: NATS_URL
            value: nats://my-nats.default:4222
          - name: GENERIC_URL
            value: example.com/api
          image: pavelgar/todo_app-broadcaster:4353a48310f400a81dccebfab67bcf5abb66009d
          imagePullPolicy: IfNotPresent
          name: broadcaster
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 3
    conditions:
    - message: Deployment does not have minimum availability.
      reason: MinimumReplicasUnavailable
      status: "False"
      type: Available
    - message: ReplicaSet "todo-broadcaster-dep-7c4f7d65f5" is progressing.
      reason: ReplicaSetUpdated
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 3
    replicas: 6
    unavailableReplicas: 3
    updatedReplicas: 6
kind: List
metadata: {}
---
