todo_app/manifests/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo-app-dep
spec:
  replicas: 4
  selector:
    matchLabels:
      app: todo-app
  strategy:
    canary:
      steps:
      - setWeight: 50
      - analysis:
          templates:
          - templateName: cpu-usage
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      volumes:
        - name: todo-volume
          emptyDir: {}
      containers:
        - name: todo-app
          image: pavelgar/todo_app:latest
          resources:
            limits:
              cpu: "100m"
              memory: "200Mi"
          volumeMounts:
          - name: todo-volume
            mountPath: /usr/src/app/files
          readinessProbe:
            initialDelaySeconds: 10 # Initial delay until the readiness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /
               port: 3000
          livenessProbe:
            initialDelaySeconds: 30 # Initial delay until the liveness is tested
            periodSeconds: 5 # How often to test
            httpGet:
               path: /
               port: 3000
