todo_app/manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-application
  name: todo-app-backend-svc
spec:
  type: LoadBalancer
  selector:
    app: todo-app-backend
  ports:
    - port: 3456
      protocol: TCP
      targetPort: 3000
