todo_app/manifests/service-nats.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-application
  name: todo-app-svc
spec:
  type: NodePort
  selector:
    app: todo-frontend-dep
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  namespace: todo-application
  name: todo-app-backend-svc
spec:
  type: NodePort
  selector:
    app: todo-backend-dep
  ports:
    - port: 3456
      protocol: TCP
      targetPort: 3000
