todo_app/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: todo-application
  name: todo-app-svc
spec:
  type: LoadBalancer
  selector:
    app: todo-app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
