todo_app/manifests/statefulset.yaml
apiVersion: v1 # Includes the Service for lazyness
kind: Service
metadata:
  namespace: todo-application
  name: postgres-svc
  labels:
    app: postgres
spec:
  type: LoadBalancer
  selector:
    app: postgresapp
  ports:
  - port: 5432
    name: web
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: todo-application
  name: postgres-ss
spec:
  serviceName: postgres-svc
  selector:
    matchLabels:
      app: postgresapp
  template:
    metadata:
      labels:
        app: postgresapp
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - name: web
              containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
