todo_app/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: todo-application
  name: todo-app-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: todo-app-svc
          servicePort: 80
      - path: /todos
        backend:
          serviceName: todo-app-backend-svc
          servicePort: 3456
